src/test/compile-fail/block-must-not-have-result-do.rs
// error-pattern:mismatched types: expected `()` but found `bool`

fn main() {
    do {
        true
    } while true;
}